--- a/src/style.css
+++ b/src/style.css
@@ -15,3 +15,23 @@ body {
   letter-spacing: 1px;
   color: #778298;
 }
+
+.login {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.login .btn {
+  font-size: 1.2rem;
+}
+
+.main {
+  width: 90%;
+  margin: 2rem auto;
+}
+
+.main-heading {
+  margin: 2rem 0;
+}
